# chat-app

./: CMakeLists.txt  CMakePresets.json  chat-app.h
app/: CMakeLists.txt
app/include/app/: chat_app.h  chat_view.h  main_window.h
app/resource/: menu.rc  resource.h
app/src/: chat_view.cc  main.cc  main_window.cc
include/: client.h  connection_base.h  main_window.h  server.h  window_base.h
include/app/: dialog_window.h  main_window.h  window_base.h
include/network_core/: client.h  server.h
network_core/: CMakeLists.txt
network_core/include/network_core/: application_client.h  application_server.h  client.h  connection.h  connection_base.h  message.h  protocol_handler.h  server.h  session.h  socket.h
network_core/src/: application_client.cc  application_server.cc  client.cc  connection.cc  connection_base.cc  protocol_handler.cc  server.cc  session.cc  socket.cc
network_core/test/: CMakeLists.txt  test.cc
src/: CMakeLists.txt  connection_base.cpp
src/app/: CMakeLists.txt  dialog_window.cpp  main.cpp  main_window.cpp
src/client/: CMakeLists.txt  client.cpp  main.cpp
src/network_core/: CMakeLists.txt  client.cpp  server.cpp
src/server/: CMakeLists.txt  main.cpp  server.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
win_widgets/: CMakeLists.txt
win_widgets/include/win_widgets/: button.h  edit.h  frame.h  frame_builder.h  input.h  window.h
win_widgets/src/: button.cc  window.cc
win_widgets/test/: CMakeLists.txt  test.cc
